Login Form updates

--- a/src/app/login-form/login-form.component.scss
+++ b/src/app/login-form/login-form.component.scss
@@ -14,7 +14,7 @@
   align-items: stretch;
   align-content: flex-start;
   gap: 32px;
-  margin: 32px;
+  padding: 32px;
   min-height: 50px;
   flex-grow: 1;
   flex-basis: 0;
