--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<div class="row-layout group">
+<div class="row-layout page-container">
   <div class="column-layout form-container">
     <h4 class="content">
       Login
@@ -12,7 +12,7 @@
         <input type="password" required igxInput />
         <label igxLabel>Password</label>
       </igx-input-group>
-      <div class="row-layout group_1">
+      <div class="row-layout group">
         <igx-checkbox labelPosition="after" class="checkbox">
           Remember me
         </igx-checkbox>
