--- a/src/app/login-page/login-page.component.scss
+++ b/src/app/login-page/login-page.component.scss
@@ -8,7 +8,7 @@
 .row-layout {
   display: flex;
 }
-.group {
+.page-container {
   justify-content: center;
   align-items: center;
   align-content: flex-start;
@@ -39,7 +39,7 @@
   gap: 24px;
   position: relative;
 }
-.group_1 {
+.group {
   justify-content: space-between;
   align-items: center;
   align-content: flex-start;
